// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test inventory logic be Case 1: Check load inventories 1`] = `
Array [
  Object {
    "_id": "ObjectID",
    "id": "1",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "productId": "ObjectID",
    "stock": 30,
    "unit": "kg",
  },
  Object {
    "_id": "ObjectID",
    "id": "2",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "productId": "ObjectID",
    "stock": 50,
    "unit": "kg",
  },
  Object {
    "_id": "ObjectID",
    "id": "3",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "productId": "ObjectID",
    "stock": 60.22,
    "unit": "kg",
  },
  Object {
    "_id": "ObjectID",
    "id": "4",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "productId": "ObjectID",
    "stock": 100,
    "unit": "piece",
  },
  Object {
    "_id": "ObjectID",
    "id": "5",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "productId": "ObjectID",
    "stock": 10,
    "unit": "piece",
  },
  Object {
    "_id": "ObjectID",
    "id": "6",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "productId": "ObjectID",
    "stock": 5.5,
    "unit": "l",
  },
]
`;

exports[`Test inventory logic be Case 1: Check load inventories 2`] = `
Array [
  Object {
    "_id": "ObjectID",
    "category": Array [
      "ObjectID",
    ],
    "id": "1",
    "name": "Fish",
  },
  Object {
    "_id": "ObjectID",
    "category": Array [
      "ObjectID",
    ],
    "id": "2",
    "name": "Meat",
  },
  Object {
    "_id": "ObjectID",
    "category": Array [
      "ObjectID",
    ],
    "id": "3",
    "name": "Pork",
  },
  Object {
    "_id": "ObjectID",
    "category": Array [
      "ObjectID",
    ],
    "id": "4",
    "name": "Apple",
  },
  Object {
    "_id": "ObjectID",
    "category": Array [
      "ObjectID",
    ],
    "id": "5",
    "name": "Banana",
  },
  Object {
    "_id": "ObjectID",
    "category": Array [
      "ObjectID",
    ],
    "id": "6",
    "name": "Vodka",
  },
]
`;

exports[`Test inventory logic be Case 1: Check load inventories 3`] = `
Array [
  Object {
    "_id": "ObjectID",
    "available": true,
    "name": "Food",
  },
  Object {
    "_id": "ObjectID",
    "available": true,
    "name": "Fruit",
  },
  Object {
    "_id": "ObjectID",
    "available": true,
    "name": "Drink",
  },
]
`;

exports[`Test inventory logic be Case 1: Check load inventories 4`] = `
Array [
  Object {
    "_id": "ObjectID",
    "id": "1",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "product": Object {
      "_id": "ObjectID",
      "category": Array [
        Object {
          "_id": "ObjectID",
          "available": true,
          "name": "Food",
        },
      ],
      "id": "1",
      "name": "Fish",
    },
    "productId": "ObjectID",
    "stock": 30,
    "unit": "kg",
  },
  Object {
    "_id": "ObjectID",
    "id": "2",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "product": Object {
      "_id": "ObjectID",
      "category": Array [
        Object {
          "_id": "ObjectID",
          "available": true,
          "name": "Food",
        },
      ],
      "id": "2",
      "name": "Meat",
    },
    "productId": "ObjectID",
    "stock": 50,
    "unit": "kg",
  },
  Object {
    "_id": "ObjectID",
    "id": "3",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "product": Object {
      "_id": "ObjectID",
      "category": Array [
        Object {
          "_id": "ObjectID",
          "available": true,
          "name": "Food",
        },
      ],
      "id": "3",
      "name": "Pork",
    },
    "productId": "ObjectID",
    "stock": 60.22,
    "unit": "kg",
  },
  Object {
    "_id": "ObjectID",
    "id": "4",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "product": Object {
      "_id": "ObjectID",
      "category": Array [
        Object {
          "_id": "ObjectID",
          "available": true,
          "name": "Fruit",
        },
      ],
      "id": "4",
      "name": "Apple",
    },
    "productId": "ObjectID",
    "stock": 100,
    "unit": "piece",
  },
  Object {
    "_id": "ObjectID",
    "id": "5",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "product": Object {
      "_id": "ObjectID",
      "category": Array [
        Object {
          "_id": "ObjectID",
          "available": true,
          "name": "Fruit",
        },
      ],
      "id": "5",
      "name": "Banana",
    },
    "productId": "ObjectID",
    "stock": 10,
    "unit": "piece",
  },
  Object {
    "_id": "ObjectID",
    "id": "6",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "product": Object {
      "_id": "ObjectID",
      "category": Array [
        Object {
          "_id": "ObjectID",
          "available": true,
          "name": "Drink",
        },
      ],
      "id": "6",
      "name": "Vodka",
    },
    "productId": "ObjectID",
    "stock": 5.5,
    "unit": "l",
  },
]
`;

exports[`Test inventory logic be Case 2: Update inventory 1`] = `
Array [
  Object {
    "_id": "ObjectID",
    "action": Array [
      Object {
        "_id": "ObjectID",
        "amount": 10,
        "date": "2021-01-05T00:00:00.000Z",
        "inventory": "ObjectID",
        "reason": "Update stock",
        "type": "remove",
      },
      Object {
        "_id": "ObjectID",
        "amount": 30,
        "date": "2021-01-04T17:00:00.000Z",
        "inventory": "ObjectID",
        "type": "add",
      },
    ],
    "add": 30,
    "id": "1",
    "inventory": "ObjectID",
    "lastUpdateTimestamp": "2021-01-05T00:00:00.000Z",
    "productId": "ObjectID",
    "remove": 10,
    "stock": 20,
    "unit": "kg",
  },
  Object {
    "_id": "ObjectID",
    "action": Array [
      Object {
        "_id": "ObjectID",
        "amount": 50,
        "date": "2021-01-04T17:00:00.000Z",
        "inventory": "ObjectID",
        "type": "add",
      },
    ],
    "add": 50,
    "id": "2",
    "inventory": "ObjectID",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "productId": "ObjectID",
    "remove": 0,
    "stock": 50,
    "unit": "kg",
  },
  Object {
    "_id": "ObjectID",
    "action": Array [
      Object {
        "_id": "ObjectID",
        "amount": 60.22,
        "date": "2021-01-04T17:00:00.000Z",
        "inventory": "ObjectID",
        "type": "add",
      },
    ],
    "add": 60,
    "id": "3",
    "inventory": "ObjectID",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "productId": "ObjectID",
    "remove": 0,
    "stock": 60.22,
    "unit": "kg",
  },
  Object {
    "_id": "ObjectID",
    "action": Array [
      Object {
        "_id": "ObjectID",
        "amount": 100,
        "date": "2021-01-04T17:00:00.000Z",
        "inventory": "ObjectID",
        "type": "add",
      },
    ],
    "add": 100,
    "id": "4",
    "inventory": "ObjectID",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "productId": "ObjectID",
    "remove": 0,
    "stock": 100,
    "unit": "piece",
  },
  Object {
    "_id": "ObjectID",
    "action": Array [
      Object {
        "_id": "ObjectID",
        "amount": 10,
        "date": "2021-01-04T17:00:00.000Z",
        "inventory": "ObjectID",
        "type": "add",
      },
    ],
    "add": 10,
    "id": "5",
    "inventory": "ObjectID",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "productId": "ObjectID",
    "remove": 0,
    "stock": 10,
    "unit": "piece",
  },
  Object {
    "_id": "ObjectID",
    "action": Array [
      Object {
        "_id": "ObjectID",
        "amount": 5.5,
        "date": "2021-01-04T17:00:00.000Z",
        "inventory": "ObjectID",
        "type": "add",
      },
    ],
    "add": 5,
    "id": "6",
    "inventory": "ObjectID",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "productId": "ObjectID",
    "remove": 0,
    "stock": 5.5,
    "unit": "l",
  },
]
`;

exports[`Test inventory logic be Case 3: Create inventory 1`] = `
Array [
  Object {
    "_id": "ObjectID",
    "id": "1",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "productId": "ObjectID",
    "stock": 30,
    "unit": "kg",
  },
  Object {
    "_id": "ObjectID",
    "id": "2",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "productId": "ObjectID",
    "stock": 50,
    "unit": "kg",
  },
  Object {
    "_id": "ObjectID",
    "id": "3",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "productId": "ObjectID",
    "stock": 60.22,
    "unit": "kg",
  },
  Object {
    "_id": "ObjectID",
    "id": "4",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "productId": "ObjectID",
    "stock": 100,
    "unit": "piece",
  },
  Object {
    "_id": "ObjectID",
    "id": "5",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "productId": "ObjectID",
    "stock": 10,
    "unit": "piece",
  },
  Object {
    "_id": "ObjectID",
    "id": "6",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "productId": "ObjectID",
    "stock": 5.5,
    "unit": "l",
  },
  Object {
    "_id": "ObjectID",
    "id": "7",
    "lastUpdateTimestamp": "2021-01-05T00:00:00.000Z",
    "productId": "ObjectID",
    "stock": 20,
    "unit": "l",
  },
]
`;

exports[`Test inventory logic be Case 3: Create inventory 2`] = `
Array [
  Object {
    "_id": "ObjectID",
    "id": "1",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "product": Object {
      "_id": "ObjectID",
      "category": Array [
        Object {
          "_id": "ObjectID",
          "available": true,
          "name": "Food",
        },
      ],
      "id": "1",
      "name": "Fish",
    },
    "productId": "ObjectID",
    "stock": 30,
    "unit": "kg",
  },
  Object {
    "_id": "ObjectID",
    "id": "2",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "product": Object {
      "_id": "ObjectID",
      "category": Array [
        Object {
          "_id": "ObjectID",
          "available": true,
          "name": "Food",
        },
      ],
      "id": "2",
      "name": "Meat",
    },
    "productId": "ObjectID",
    "stock": 50,
    "unit": "kg",
  },
  Object {
    "_id": "ObjectID",
    "id": "3",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "product": Object {
      "_id": "ObjectID",
      "category": Array [
        Object {
          "_id": "ObjectID",
          "available": true,
          "name": "Food",
        },
      ],
      "id": "3",
      "name": "Pork",
    },
    "productId": "ObjectID",
    "stock": 60.22,
    "unit": "kg",
  },
  Object {
    "_id": "ObjectID",
    "id": "4",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "product": Object {
      "_id": "ObjectID",
      "category": Array [
        Object {
          "_id": "ObjectID",
          "available": true,
          "name": "Fruit",
        },
      ],
      "id": "4",
      "name": "Apple",
    },
    "productId": "ObjectID",
    "stock": 100,
    "unit": "piece",
  },
  Object {
    "_id": "ObjectID",
    "id": "5",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "product": Object {
      "_id": "ObjectID",
      "category": Array [
        Object {
          "_id": "ObjectID",
          "available": true,
          "name": "Fruit",
        },
      ],
      "id": "5",
      "name": "Banana",
    },
    "productId": "ObjectID",
    "stock": 10,
    "unit": "piece",
  },
  Object {
    "_id": "ObjectID",
    "id": "6",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "product": Object {
      "_id": "ObjectID",
      "category": Array [
        Object {
          "_id": "ObjectID",
          "available": true,
          "name": "Drink",
        },
      ],
      "id": "6",
      "name": "Vodka",
    },
    "productId": "ObjectID",
    "stock": 5.5,
    "unit": "l",
  },
  Object {
    "_id": "ObjectID",
    "id": "7",
    "lastUpdateTimestamp": "2021-01-05T00:00:00.000Z",
    "product": Object {
      "_id": "ObjectID",
      "category": Array [
        Object {
          "_id": "ObjectID",
          "available": true,
          "name": "Drink",
        },
      ],
      "id": "7",
      "name": "Whiskey",
    },
    "productId": "ObjectID",
    "stock": 20,
    "unit": "l",
  },
]
`;

exports[`Test inventory logic be Case 3a: Create inventory with duplicate id 1`] = `
Array [
  Object {
    "_id": "ObjectID",
    "id": "1",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "productId": "ObjectID",
    "stock": 30,
    "unit": "kg",
  },
  Object {
    "_id": "ObjectID",
    "id": "2",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "productId": "ObjectID",
    "stock": 50,
    "unit": "kg",
  },
  Object {
    "_id": "ObjectID",
    "id": "3",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "productId": "ObjectID",
    "stock": 60.22,
    "unit": "kg",
  },
  Object {
    "_id": "ObjectID",
    "id": "4",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "productId": "ObjectID",
    "stock": 100,
    "unit": "piece",
  },
  Object {
    "_id": "ObjectID",
    "id": "5",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "productId": "ObjectID",
    "stock": 10,
    "unit": "piece",
  },
  Object {
    "_id": "ObjectID",
    "id": "6",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "productId": "ObjectID",
    "stock": 5.5,
    "unit": "l",
  },
]
`;

exports[`Test inventory logic be Case 4: Delete inventory 1`] = `
Array [
  Object {
    "_id": "ObjectID",
    "id": "2",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "productId": "ObjectID",
    "stock": 50,
    "unit": "kg",
  },
  Object {
    "_id": "ObjectID",
    "id": "4",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "productId": "ObjectID",
    "stock": 100,
    "unit": "piece",
  },
  Object {
    "_id": "ObjectID",
    "id": "5",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "productId": "ObjectID",
    "stock": 10,
    "unit": "piece",
  },
  Object {
    "_id": "ObjectID",
    "id": "6",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "productId": "ObjectID",
    "stock": 5.5,
    "unit": "l",
  },
]
`;

exports[`Test inventory logic be Case 5: Update and delete category 1`] = `
Array [
  Object {
    "_id": "ObjectID",
    "available": true,
    "name": "Cream",
  },
  Object {
    "_id": "ObjectID",
    "available": false,
    "name": "Food",
  },
  Object {
    "_id": "ObjectID",
    "available": false,
    "name": "Fruit",
  },
  Object {
    "_id": "ObjectID",
    "available": false,
    "name": "Drink",
  },
]
`;

exports[`Test inventory logic be Case 5: Update and delete category 2`] = `
Array [
  Object {
    "_id": "ObjectID",
    "available": false,
    "name": "Food",
  },
  Object {
    "_id": "ObjectID",
    "available": false,
    "name": "Fruit",
  },
  Object {
    "_id": "ObjectID",
    "available": false,
    "name": "Drink",
  },
  Object {
    "_id": "ObjectID",
    "available": true,
    "name": "Cream",
  },
]
`;

exports[`Test inventory logic be Case 6: Update inventory with object id 1`] = `
Array [
  Object {
    "_id": "ObjectID",
    "category": Object {
      "_id": "ObjectID",
      "available": false,
      "name": "Fruit",
    },
    "id": "1",
    "lastUpdateTimestamp": "2021-01-05T00:00:00.000Z",
    "name": "Fish",
    "stock": 30,
    "unit": "kg",
  },
  Object {
    "_id": "ObjectID",
    "category": Object {
      "_id": "ObjectID",
      "available": false,
      "name": "Food",
    },
    "id": "2",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "name": "Meat",
    "stock": 50,
    "unit": "kg",
  },
  Object {
    "_id": "ObjectID",
    "category": Object {
      "_id": "ObjectID",
      "available": false,
      "name": "Food",
    },
    "id": "3",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "name": "Pork",
    "stock": 60.22,
    "unit": "kg",
  },
  Object {
    "_id": "ObjectID",
    "category": Object {
      "_id": "ObjectID",
      "available": false,
      "name": "Fruit",
    },
    "id": "4",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "name": "Apple",
    "stock": 100,
    "unit": "piece",
  },
  Object {
    "_id": "ObjectID",
    "category": Object {
      "_id": "ObjectID",
      "available": false,
      "name": "Fruit",
    },
    "id": "5",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "name": "Banana",
    "stock": 10,
    "unit": "piece",
  },
  Object {
    "_id": "ObjectID",
    "category": Object {
      "_id": "ObjectID",
      "available": false,
      "name": "Drink",
    },
    "id": "6",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "name": "Vodka",
    "stock": 5.5,
    "unit": "l",
  },
]
`;

exports[`Test inventory logic be Case 6: Update inventory with object id 2`] = `
Array [
  Object {
    "_id": "ObjectID",
    "available": false,
    "name": "Food",
  },
  Object {
    "_id": "ObjectID",
    "available": false,
    "name": "Fruit",
  },
  Object {
    "_id": "ObjectID",
    "available": false,
    "name": "Drink",
  },
]
`;

exports[`Test inventory logic be Case 6: Update inventory with object id 3`] = `
Array [
  Object {
    "_id": "ObjectID",
    "category": Object {
      "_id": "ObjectID",
      "available": false,
      "name": "Drink",
    },
    "id": "1",
    "lastUpdateTimestamp": "2021-01-05T00:00:00.000Z",
    "name": "Fish",
    "stock": 30,
    "unit": "kg",
  },
  Object {
    "_id": "ObjectID",
    "category": Object {
      "_id": "ObjectID",
      "available": false,
      "name": "Food",
    },
    "id": "2",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "name": "Meat",
    "stock": 50,
    "unit": "kg",
  },
  Object {
    "_id": "ObjectID",
    "category": Object {
      "_id": "ObjectID",
      "available": false,
      "name": "Food",
    },
    "id": "3",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "name": "Pork",
    "stock": 60.22,
    "unit": "kg",
  },
  Object {
    "_id": "ObjectID",
    "category": Object {
      "_id": "ObjectID",
      "available": false,
      "name": "Fruit",
    },
    "id": "4",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "name": "Apple",
    "stock": 100,
    "unit": "piece",
  },
  Object {
    "_id": "ObjectID",
    "category": Object {
      "_id": "ObjectID",
      "available": false,
      "name": "Fruit",
    },
    "id": "5",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "name": "Banana",
    "stock": 10,
    "unit": "piece",
  },
  Object {
    "_id": "ObjectID",
    "category": Object {
      "_id": "ObjectID",
      "available": false,
      "name": "Drink",
    },
    "id": "6",
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "name": "Vodka",
    "stock": 5.5,
    "unit": "l",
  },
]
`;

exports[`Test inventory logic be Case 6: Update inventory with object id 4`] = `
Array [
  Object {
    "_id": "ObjectID",
    "available": false,
    "name": "Food",
  },
  Object {
    "_id": "ObjectID",
    "available": false,
    "name": "Fruit",
  },
  Object {
    "_id": "ObjectID",
    "available": false,
    "name": "Drink",
  },
]
`;

exports[`Test inventory logic be for retail Case 1: Check load inventories 1`] = `
Array [
  Object {
    "_id": "ObjectID",
    "attributes": Array [],
    "category": Object {
      "_id": "ObjectID",
      "available": false,
      "name": "Food",
      "subCategory": Array [
        Object {
          "_id": "ObjectID",
          "available": true,
          "name": "Vegetables",
        },
      ],
    },
    "comboIngredient": Array [],
    "hasComboIngredient": false,
    "id": "1",
    "isActive": true,
    "isFavorite": false,
    "isRefundable": false,
    "isVoucher": false,
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "manualPrice": false,
    "name": "Fish",
    "price": 30,
    "showOnOrderScreen": true,
    "stock": 30,
    "unit": "kg",
    "unitCostPrice": 10,
  },
  Object {
    "_id": "ObjectID",
    "attributes": Array [],
    "category": Object {
      "_id": "ObjectID",
      "available": false,
      "name": "Food",
      "subCategory": Array [
        Object {
          "_id": "ObjectID",
          "available": true,
          "name": "Vegetables",
        },
      ],
    },
    "comboIngredient": Array [],
    "hasComboIngredient": false,
    "id": "2",
    "isActive": true,
    "isFavorite": true,
    "isRefundable": true,
    "isVoucher": false,
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "manualPrice": true,
    "name": "Meat",
    "price": 20,
    "showOnOrderScreen": true,
    "stock": 50,
    "unit": "kg",
    "unitCostPrice": 15,
  },
  Object {
    "_id": "ObjectID",
    "attributes": Array [],
    "category": Object {
      "_id": "ObjectID",
      "available": false,
      "name": "Food",
      "subCategory": Array [
        Object {
          "_id": "ObjectID",
          "available": true,
          "name": "Vegetables",
        },
      ],
    },
    "comboIngredient": Array [],
    "hasComboIngredient": false,
    "id": "3",
    "isActive": true,
    "isFavorite": true,
    "isRefundable": false,
    "isVoucher": false,
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "manualPrice": false,
    "name": "Pork",
    "price": 55,
    "showOnOrderScreen": true,
    "stock": 60.22,
    "unit": "kg",
    "unitCostPrice": 30,
  },
  Object {
    "_id": "ObjectID",
    "attributes": Array [
      Object {
        "color": "red",
      },
    ],
    "category": Object {
      "_id": "ObjectID",
      "available": false,
      "name": "Fruit",
      "subCategory": Array [],
    },
    "comboIngredient": Array [],
    "hasComboIngredient": false,
    "id": "4",
    "isActive": true,
    "isFavorite": true,
    "isRefundable": false,
    "isVoucher": false,
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "manualPrice": false,
    "name": "Apple",
    "price": 100,
    "showOnOrderScreen": false,
    "stock": 100,
    "unit": "piece",
    "unitCostPrice": 50,
  },
  Object {
    "_id": "ObjectID",
    "attributes": Array [
      Object {
        "size": "big",
      },
    ],
    "category": Object {
      "_id": "ObjectID",
      "available": false,
      "name": "Fruit",
      "subCategory": Array [],
    },
    "comboIngredient": Array [],
    "hasComboIngredient": false,
    "id": "5",
    "isActive": true,
    "isFavorite": true,
    "isRefundable": false,
    "isVoucher": false,
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "manualPrice": false,
    "name": "Banana",
    "price": 17,
    "showOnOrderScreen": true,
    "stock": 10,
    "unit": "piece",
    "unitCostPrice": 4,
  },
  Object {
    "_id": "ObjectID",
    "attributes": Array [],
    "category": Object {
      "_id": "ObjectID",
      "available": false,
      "name": "Wine",
    },
    "comboIngredient": Array [],
    "hasComboIngredient": false,
    "id": "6",
    "isActive": true,
    "isFavorite": true,
    "isRefundable": false,
    "isVoucher": false,
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "manualPrice": false,
    "name": "Vodka",
    "price": 44,
    "showOnOrderScreen": true,
    "stock": 5.5,
    "unit": "l",
    "unitCostPrice": 22,
  },
  Object {
    "_id": "ObjectID",
    "attributes": Array [],
    "category": Object {
      "_id": "ObjectID",
      "available": false,
      "name": "Food",
      "subCategory": Array [
        Object {
          "_id": "ObjectID",
          "available": true,
          "name": "Vegetables",
        },
      ],
    },
    "comboIngredient": Array [
      Object {
        "_id": "ObjectID",
        "name": "Fish",
        "price": 30,
        "quantity": 20,
        "unitCostPrice": 10,
      },
      Object {
        "_id": "ObjectID",
        "name": "Meat",
        "price": 20,
        "quantity": 1,
        "unitCostPrice": 15,
      },
    ],
    "hasComboIngredient": true,
    "id": "7",
    "isActive": true,
    "isFavorite": true,
    "isRefundable": false,
    "isVoucher": false,
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "manualPrice": false,
    "name": "ComboFishMeat",
    "price": 55,
    "showOnOrderScreen": true,
    "stock": 1,
    "unit": "piece",
    "unitCostPrice": 215,
  },
]
`;

exports[`Test inventory logic be for retail Case 1: Check load inventories 2`] = `
Array [
  Object {
    "_id": "ObjectID",
    "available": false,
    "name": "Food",
    "subCategory": Array [
      Object {
        "_id": "ObjectID",
        "available": true,
        "name": "Vegetables",
      },
    ],
  },
  Object {
    "_id": "ObjectID",
    "available": false,
    "name": "Fruit",
    "subCategory": Array [],
  },
  Object {
    "_id": "ObjectID",
    "available": true,
    "name": "Drink",
    "subCategory": Array [
      Object {
        "_id": "ObjectID",
        "available": false,
        "name": "Wine",
      },
      Object {
        "_id": "ObjectID",
        "available": true,
        "name": "Soda",
      },
    ],
  },
]
`;

exports[`Test inventory logic be for retail Case 2: Test remove item from category 1`] = `
Array [
  Object {
    "_id": "ObjectID",
    "attributes": Array [],
    "category": Object {
      "_id": "ObjectID",
      "available": false,
      "name": "Food",
      "subCategory": Array [
        Object {
          "_id": "ObjectID",
          "available": true,
          "name": "Vegetables",
        },
      ],
    },
    "comboIngredient": Array [],
    "hasComboIngredient": false,
    "id": "1",
    "isActive": true,
    "isFavorite": false,
    "isRefundable": false,
    "isVoucher": false,
    "lastUpdateTimestamp": "2021-01-05T00:00:00.000Z",
    "manualPrice": false,
    "name": "Fish",
    "price": 30,
    "showOnOrderScreen": true,
    "stock": 5,
    "unit": "kg",
    "unitCostPrice": 10,
  },
  Object {
    "_id": "ObjectID",
    "attributes": Array [],
    "category": Object {
      "_id": "ObjectID",
      "available": false,
      "name": "Food",
      "subCategory": Array [
        Object {
          "_id": "ObjectID",
          "available": true,
          "name": "Vegetables",
        },
      ],
    },
    "comboIngredient": Array [],
    "hasComboIngredient": false,
    "id": "2",
    "isActive": true,
    "isFavorite": true,
    "isRefundable": true,
    "isVoucher": false,
    "lastUpdateTimestamp": "2021-01-05T00:00:00.000Z",
    "manualPrice": true,
    "name": "Meat",
    "price": 20,
    "showOnOrderScreen": true,
    "stock": 49,
    "unit": "kg",
    "unitCostPrice": 15,
  },
  Object {
    "_id": "ObjectID",
    "attributes": Array [],
    "category": Object {
      "_id": "ObjectID",
      "available": false,
      "name": "Food",
      "subCategory": Array [
        Object {
          "_id": "ObjectID",
          "available": true,
          "name": "Vegetables",
        },
      ],
    },
    "comboIngredient": Array [],
    "hasComboIngredient": false,
    "id": "3",
    "isActive": true,
    "isFavorite": true,
    "isRefundable": false,
    "isVoucher": false,
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "manualPrice": false,
    "name": "Pork",
    "price": 55,
    "showOnOrderScreen": true,
    "stock": 60.22,
    "unit": "kg",
    "unitCostPrice": 30,
  },
  Object {
    "_id": "ObjectID",
    "attributes": Array [
      Object {
        "color": "red",
      },
    ],
    "category": Object {
      "_id": "ObjectID",
      "available": false,
      "name": "Fruit",
      "subCategory": Array [],
    },
    "comboIngredient": Array [],
    "hasComboIngredient": false,
    "id": "4",
    "isActive": true,
    "isFavorite": true,
    "isRefundable": false,
    "isVoucher": false,
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "manualPrice": false,
    "name": "Apple",
    "price": 100,
    "showOnOrderScreen": false,
    "stock": 100,
    "unit": "piece",
    "unitCostPrice": 50,
  },
  Object {
    "_id": "ObjectID",
    "attributes": Array [
      Object {
        "size": "big",
      },
    ],
    "category": Object {
      "_id": "ObjectID",
      "available": false,
      "name": "Fruit",
      "subCategory": Array [],
    },
    "comboIngredient": Array [],
    "hasComboIngredient": false,
    "id": "5",
    "isActive": true,
    "isFavorite": true,
    "isRefundable": false,
    "isVoucher": false,
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "manualPrice": false,
    "name": "Banana",
    "price": 17,
    "showOnOrderScreen": true,
    "stock": 10,
    "unit": "piece",
    "unitCostPrice": 4,
  },
  Object {
    "_id": "ObjectID",
    "attributes": Array [],
    "category": Object {
      "_id": "ObjectID",
      "available": false,
      "name": "Wine",
    },
    "comboIngredient": Array [],
    "hasComboIngredient": false,
    "id": "6",
    "isActive": true,
    "isFavorite": true,
    "isRefundable": false,
    "isVoucher": false,
    "lastUpdateTimestamp": "2021-01-04T17:00:00.000Z",
    "manualPrice": false,
    "name": "Vodka",
    "price": 44,
    "showOnOrderScreen": true,
    "stock": 5.5,
    "unit": "l",
    "unitCostPrice": 22,
  },
  Object {
    "_id": "ObjectID",
    "attributes": Array [],
    "category": Object {
      "_id": "ObjectID",
      "available": false,
      "name": "Food",
      "subCategory": Array [
        Object {
          "_id": "ObjectID",
          "available": true,
          "name": "Vegetables",
        },
      ],
    },
    "comboIngredient": Array [
      Object {
        "_id": "ObjectID",
        "name": "Fish",
        "price": 30,
        "quantity": 20,
        "unitCostPrice": 10,
      },
      Object {
        "_id": "ObjectID",
        "name": "Meat",
        "price": 20,
        "quantity": 1,
        "unitCostPrice": 15,
      },
    ],
    "hasComboIngredient": true,
    "id": "7",
    "isActive": true,
    "isFavorite": true,
    "isRefundable": false,
    "isVoucher": false,
    "lastUpdateTimestamp": "2021-01-05T00:00:00.000Z",
    "manualPrice": false,
    "name": "ComboFishMeat",
    "price": 55,
    "showOnOrderScreen": true,
    "stock": 0,
    "unit": "piece",
    "unitCostPrice": 215,
  },
]
`;

exports[`Test inventory logic be for retail Case 2a: Test remove item from inventory fail 1`] = `
Array [
  Object {
    "_id": "ObjectID",
    "outOfStock": true,
    "quantity": 51,
  },
  Object {
    "_id": "ObjectID",
    "outOfStock": false,
    "quantity": 2,
  },
  Object {
    "_id": "ObjectID",
    "outOfStock": true,
    "quantity": 2,
  },
]
`;
